# openmp_tutorial

./: CMakeLists.txt  Makefile
include/mpcs_hpc/: mat_blas.h  mat_ops.h  online_mean.h  rand.h
src/: dgemm.c
src/mpcs_hpc/: mat_blas.c  mat_ops.c  mat_types.c  online_mean.c  rand.c  tick.c
